<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
   <name>pkgname</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="maleicacid824+dev@gmail.com">maleicacid</maintainer>
   <license>Apache-2.0</license>
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
   <build_depend>perception_msgs</build_depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ouxt_lint_common</test_depend>
   <export>
      <build_type>ament_cmake</build_type>
   </export>
</package>
